src/test/deca/context/valid/created/assign_compatible/FLOAT_INT.deca
// Description:
//      Test de la compatibilite pour l'affectation
//      Regle 1, T1 float et T2 int
// Resultats:
//      OK

{
    float a = 4;
}